src/css/base.css
@import url('./variables.css');

/* Estilo Base */
body {
  background-color: var(--bg-color);
  color: var(--primary-color);
}

/* Headers e Títulos */
header h1 {
  text-align: center;
  font-size: 2rem;
  color: var(--text-color);
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
}
h1.title {
  font-weight: 600;
  text-transform: uppercase;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.95);
}
h5 {
  text-transform: uppercase;
  font-weight: 420;
  letter-spacing: 1px;
}

/* Footer */
footer {
  margin: 0;
  padding: 0;
}
footer p {
  font-size: 0.875rem;
  text-align: center;
  padding: 1rem;
  margin: 0;
}
footer p a {
  color: var(--primary-color);
  text-decoration: none;
}
footer p a:hover {
  color: var(--hover-color);
  text-decoration: none;
}

/* Estilização geral para WebKit (Chrome, Safari, Edge) */
::-webkit-scrollbar {
  width: 10px; /* Largura da scrollbar vertical */
  height: 10px; /* Altura da scrollbar horizontal */
}

::-webkit-scrollbar-track {
  background: #1a1a1a; /* Cor do fundo da track */
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background: #333; /* Cor do thumb (parte móvel) */
  border-radius: 5px;
  border: 2px solid #1a1a1a; /* Borda para criar contraste */
}

::-webkit-scrollbar-thumb:hover {
  background: #444; /* Cor ao passar o mouse */
}

/* Estilização para Firefox */
* {
  scrollbar-width: thin; /* "auto" ou "thin" */
  scrollbar-color: #333 #1a1a1a; /* thumb e track */
}

